--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
 	<link rel="stylesheet" href="css/reset.css"> <!-- CSS reset -->
 	<link rel="stylesheet" href="css/style.css"> <!-- Resource style -->
+	<link rel="stylesheet" href="css/demo.css"> <!-- Demo style -->
   	
 	<title>Slide In Panel</title>
 </head>
